// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpointsMedia() when receives a argument and it has a only one breakpoint 1`] = `
Array [
  Array [
    "@media only screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`breakpointsMedia() when receives a argument and it has two or more breakpoints 1`] = `
Array [
  Array [
    "@media only screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media only screen and (min-width:",
    "768",
    "px){",
    "text-align: left;",
    "}",
  ],
]
`;
